[package]
name = "mario"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.23.0", features = ["serde"] }
image = "0.24.5"
sdl2 = { version = "0.35.2", features = ["bundled"] }
serde = { version = "1.0.153", features = ["derive"] }

serde_json = "1.0.94"

