[package]
name = "mario"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.27", features = ["thread-pool"] }
glam = { version = "0.23.0", features = ["serde"] }
image = "0.24.5"
sdl2 = { version = "0.35.2", features = ["bundled", "unsafe_textures"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
windows = { version = "0.46.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
